--- a/data/posts/hello.mdx
+++ b/data/posts/hello.mdx
@@ -1,6 +1,6 @@
 ---
-published_at: "2021-09-01"
-title: "Find out what's new in my portfolio website"
+published_at: "2023-08-05"
+title: "Hello from Akshat!"
 category: "web-dev"
 tags: ["nextjs", "showdev", "webdev", "react"]
 description: "I want to share new updated version of my portfolio website. Here is the list of new features and changes I made in my portfolio website."
@@ -14,6 +14,3 @@ Here is the list of new features and changes that I made in my portfolio website
 * Search feature for articles
 * Changed website color mode switcher icons and added animation
 * Fixed outline issue of links and buttons
-
-**Website link:** [ma-ahmad](https://my-portfolio-ma-ahmad.vercel.app) <br />
-**Github repo:** [https://github.com/MA-Ahmad/myPortfolio](https://github.com/MA-Ahmad/myPortfolio)
